--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,15 @@
       <h1 class="app-login__title">Spotrx</h1>
     </div>
     <p class="app-login__text">To use app you must log in</p>
-    <app-button class="app-login__button" (click)="login()">login</app-button>
+    <button type="button" appButton class="app-login__button" (click)="login()">login</button>
   </div>
   }
 
   @if(userData.isSuccess()){
   <app-navbar [userData]="userData.data()" [open]="menuOpen()" (toggleMenu)="menuOpen.set($event)"></app-navbar>
-  <app-button aria-label="menu" [mode]="'opacity'" class="app-menu-button" (click)="toggleMenu()">
+  <button type="button" appButton aria-label="menu" [mode]="'opacity'" class="app-menu-button" (click)="toggleMenu()">
     <app-icon class="icon" type="menu"></app-icon>
-  </app-button>
+  </button>
   <main class="main" [ngClass]="{
   'main--player': playerState | async }">
     <router-outlet></router-outlet>
