--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import "@angular/material/prebuilt-themes/purple-green.css";
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
-@import "colors.scss";
+@import "./styles/button.scss";
 
 
 html,
@@ -82,53 +82,4 @@ body {
 
 ngx-skeleton-loader .progress-dark.skeleton-loader {
   margin-bottom: 0;
-}
-
-@mixin btn($background-color, $border-color, $hover-backgorund) {
-  color: $text;
-  background-color: $background-color;
-  border: 2px solid $border-color;
-  padding: 10px 20px;
-  border-radius: 10px;
-  font-family: 'Fredoka', sans-serif;
-  font-weight: 600;
-  transition: background-color 0.2s;
-  overflow: hidden;
-  position: relative;
-  display: block;
-
-  .ripple {
-    position: absolute;
-    border-radius: 50%;
-    top: 0;
-    left: 0;
-    transform: scale(0);
-    background-color: rgba(255, 255, 255, 0.7);
-  }
-
-  svg {
-    width: 18px;
-    height: 18px;
-  }
-
-  &:hover {
-    background-color: rgba($hover-backgorund, 0.9);
-    border-color: none
-  }
-}
-
-.btn {
-  @include btn($primary, $primary, $primary);
-}
-
-.btn-text {
-  @include btn(transparent, transparent, #404040);
-}
-
-.btn-opacity {
-  background-color: rgba($primary, 0.5);
-  border-radius: 4px;
-  padding: 5px 10px;
-  border: none;
-  position: relative;
 }
