--- a/src/app/shared/track-list/track-list.component.html
+++ b/src/app/shared/track-list/track-list.component.html
@@ -5,46 +5,14 @@
   @if(!isLoading() && tracksList()){
   <div class="track-list">
     @for(item of tracksList()?.items; track item.track.id; let i = $index){
-    <button type="button" (click)="play(i)" class="track">
-      <div class="song-info">
-        <img [alt]="item.track.name" class="track-img" width="90" height="90" [ngSrc]="item.track.album.images[1].url">
-        <div class="album-artist">
-          <h2 class="name">{{item.track.name}}</h2>
-          <span class="album-name">
-            {{item.track.album.name}}
-          </span>
-          <div class="track-artist">
-            @for(artist of item.track.artists; track artist.id){
-            <span class="artist">{{artist.name}}</span>
-            }
-          </div>
-        </div>
-      </div>
-      <span class="time">{{item.track.duration_ms | duration}}
-      </span>
-    </button>
+    <app-track [track]="item.track" (click)="play(i)"></app-track>
     }
   </div>
   }
   @if(isLoading()){
   <div class="track-list track-list--skeleton">
     @for(item of skeletonLoadingArray; track item; let i = $index){
-    <button type="button" class="track">
-      <div class="song-info">
-        <ngx-skeleton-loader animation="progress-dark" count="1"
-          [theme]="{ height: '90px', width: '90px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-        <div class="album-artist">
-          <ngx-skeleton-loader animation="progress-dark" count="1"
-            [theme]="{ height: '32px', width: '160px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-          <ngx-skeleton-loader class="artist-skeleton" animation="progress-dark" count="2"
-            [theme]="{ height: '16px', width: '150px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-        </div>
-      </div>
-      <span class="time">
-        <ngx-skeleton-loader animation="progress-dark" count="1"
-          [theme]="{ height: '16px', width: '30px', 'background-color': '#2c2f31' }"></ngx-skeleton-loader>
-      </span>
-    </button>
+    <app-track [isLoading]="true"></app-track>
     }
   </div>
   }
