--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -36,10 +36,16 @@
     padding: 0 8px;
 
     @media screen and (min-width: 980px) {
-      margin-left: 25%;
       width: 100%;
       max-width: 250px;
     }
+  }
+
+  .action-buttons-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .song-info {
