--- a/src/app/shared/track/track.component.html
+++ b/src/app/shared/track/track.component.html
@@ -1,9 +1,9 @@
-<div class="track">
+<div appButton class="track">
 @if(!isLoading()){
     <div class="song-info">
       <img [alt]="track()?.name" class="track-img" width="90" height="90" [ngSrc]="track()?.album?.images?.[1]?.url ?? ''">
       <div class="album-artist">
-        <h2 class="name">{{track.name}}</h2>
+        <h2 class="name">{{track()?.name}}</h2>
         <span class="album-name">
           {{track()?.album?.name}}
         </span>
