--- a/src/app/shared/track/track.component.scss
+++ b/src/app/shared/track/track.component.scss
@@ -16,7 +16,7 @@
   transition: background-color 0.3s;
 
   &:hover {
-    background-color: #2c2f31;
+    background-color: rgba(0,0,0,0.2)
   }
 
   .track-img {
