--- a/src/styles/m3-theme.scss
+++ b/src/styles/m3-theme.scss
@@ -139,13 +139,13 @@ $light-theme: mat.define-theme((color: (theme-type: light,
     ));
 $dark-theme: mat.define-theme((color: (theme-type: dark,
         primary: $_primary,
-        tertiary: $_tertiary,
-        use-system-variables: true,
+        tertiary: $_primary,
+        use-system-variables: false,
       ),
-      typography: (use-system-variables: true,
+      typography: (use-system-variables: false,
       ),
     ));
 
-:root {
+body {
   @include mat.all-component-themes($dark-theme);
 }
