--- a/src/styles/m3-theme.scss
+++ b/src/styles/m3-theme.scss
@@ -139,7 +139,7 @@ $light-theme: mat.define-theme((color: (theme-type: light,
     ));
 $dark-theme: mat.define-theme((color: (theme-type: dark,
         primary: $_primary,
-        tertiary: $_primary,
+        tertiary: $_tertiary,
         use-system-variables: false,
       ),
       typography: (use-system-variables: false,
