--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,13 @@
   position: relative;
   height: 100%;
 
+  .app-menu-backdrop {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+  }
+
   .main {
     margin-left: 0;
     width: 100%;
